<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.kunfury</groupId>
  <artifactId>blepFishing_IcQb</artifactId>
  <version>3.0.0</version>
  <packaging>jar</packaging>
  <name>BlepFishing</name>
  <description>BlepFishing, IcQb fork – fully compatible with 1.20.4</description>


  <organization>
    <name>IcQb</name>
    <url>https://github.com/IcQby/Blep-Fishing_IcQb</url>
  </organization>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/IcQby/Blep-Fishing_IcQb/issues</url>
  </issueManagement>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>Public Releases</name>
      <url>https://maven.pkg.github.com/IcQby/Blep-Fishing_IcQb</url>
    </repository>
  </distributionManagement>


<properties>
    <java.version>17</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
</properties>

  <repositories>
    <!-- This adds the Spigot Maven repository to the build -->
    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <!-- This adds the Spigot Maven repository to the build -->
    <repository>
      <id>neetgames-repo</id>
      <url>https://nexus.neetgames.com/repository/maven-releases/</url>
    </repository>
    <!-- Repo for Vault -->
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <!-- Repo for PlaceholderAPI -->
    <repository>
      <id>placeholderapi</id>
      <url>https://repo.extendedclip.com/releases/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.20.4-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
      <dependency>
          <groupId>com.googlecode.json-simple</groupId>
          <artifactId>json-simple</artifactId>
          <version>1.1.1</version>
      </dependency>
    <!-- https://mvnrepository.com/artifact/com.gmail.nossr50.mcMMO/mcMMO -->
    <dependency>
      <groupId>com.gmail.nossr50.mcMMO</groupId>
      <artifactId>mcMMO</artifactId>
      <version>2.2.004</version>
         <scope>provided</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
    <dependency>
      <groupId>org.xerial</groupId>
      <artifactId>sqlite-jdbc</artifactId>
      <version>3.46.0.0</version>
    </dependency>
    <dependency>
      <groupId>com.github.MilkBowl</groupId>
      <artifactId>VaultAPI</artifactId>
      <version>1.7</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>me.clip</groupId>
      <artifactId>placeholderapi</artifactId>
      <version>2.11.6</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
<plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-compiler-plugin</artifactId>
    <version>3.10.1</version>
    <configuration>
        <source>17</source>
        <target>17</target>
        <release>17</release> </configuration>
</plugin>
<plugin>
  <groupId>org.apache.maven.plugins</groupId>
  <artifactId>maven-shade-plugin</artifactId>
  <version>3.5.0</version>
  <executions>
    <execution>
      <phase>package</phase>
      <goals><goal>shade</goal></goals>
      <configuration>
        <relocations>
          <relocation>
            <pattern>org.json.simple</pattern>
            <shadedPattern>org.kunfury.shaded.json.simple</shadedPattern>
          </relocation>
        </relocations>
      </configuration>
    </execution>
  </executions>
</plugin>
    </plugins>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
  </build>

</project>
